# hexbuffer

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  HTTPS_PROXY_ANALYSIS.md  PRODUCT.md  README.md  VERSION  ai-engine.pkg.config.json  build.sh  components.json  har.json  index.html  next.config.mjs  package.json  pnpm-lock.yaml  res.txt  splashscreen.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
.opencode/plans/: global-search-top-nav.md  move-live-traffic-buttons-to-floating-bar.md  nvd-intelligence-feature.md  pages-pattern-refactor.md
.qoder/plans/: Admin_Dashboard_with_Postgres_108a8126.md  categorized-sidebar-nav.md  fix-threats-directory-import.md  monaco-to-codemirror-migration.md  pin-request-feature.md  regression-feature.md  split-repository-into-module_f169d709.md
apps/developer-hub/: package.json  splashscreen.html
apps/hexbuffer/: package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/proton/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/security-suite/: package.json  vite.config.ts
dist-tmp/: index.html  splashscreen.html
dist-tmp/assets/: api-DsaR_o2N.js  button-group-Cv7MmMHh.js  context-menu-B-SGypz6.js  dropdown-menu-CnfDXUgA.js  highlighted-text-V2zcmWtQ.js  index--HrYW5_D.js  index-0Ep3r2Hq.js  index-9SxNdwNg.js  index-BFFozfkf.js  index-BH5zUwA9.js  index-BJDkrPcL.js  index-CTB5HR4O.js  index-CxUYxQ-R.js  index-D3QEtN2V.js  index-D6ow6-Lb.js  index-DyrZOpNS.js  index-STJFQN-B.js  index-ju51z_xX.js  index-n4XR8q73.js  main-BSY0mfW1.js  main-u88m3PJh.css  tools-C8PVrSrh.js  (+16 more)
docs/: ai-assistant-feature-plan.md  automation-system.md  backend-automate.md  browser-automation.md  capabilities.md  collaborator-desktop.md  customer-portal-plan.md  feature-spec-detail.md  frontend-automate.md  intercept.md  live-traffic-performance.md  live-traffic.md  mitm-spec.md  mobile-labs.md  plugin-system.md  product-requirements.md  rag-feature-plan.md  repeater-scripts.md  security-audit.md  termul-browser-reference.md  threats.md  tools.md  updater-setup.md
mastra/: package-lock.json  package.json  pnpm-lock.yaml
scripts/: build-sidecars.mjs  build.sh  bump-version.sh  clear_routes.sh  deploy.sh  fix-packet-capture-permissions.sh  install.sh  setup-linux-deps.sh  update-deps.sh
sidecars/: build-sidecars.mjs  download-rust-analyzer.mjs  index.mjs  package.json
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  apprecon.db  apsara_data.db  tauri.conf.json
src-tauri/.0xbuffer/: ca.pem
src-tauri/.apprecon/: ca-key.pem  ca.pem
src-tauri/.seven_project/: ca-key.pem
src-tauri/capabilities/: default.json  settings.json
src-tauri/cert/: ca-key.pem  ca.pem
src-tauri/data/: apsara_data.db  bug_bounty.db
src-tauri/icons/: icon.icns
src-tauri/resources/: annotation-overlay.js
src-tauri/resources/ghidra/: ExportCallGraph.java  ExportDecompiler.java  ExportFunctions.java  ExportImports.java  ExportStrings.java
src-tauri/src/: Cargo.toml  ai_browser.rs  app_commands.rs  cert.rs  db.rs  intruder.rs  lib.rs  lifecycle.rs  logger.rs  main.rs  proxy.rs  setup.rs  state.rs  target.rs  tray.rs  types.rs  utils.rs  websocket.rs
src-tauri/src/ai/: auto_mark.rs  chat.rs  commands.rs  keyring.rs  mastra.rs  mod.rs  pixel.rs  providers.rs  settings.rs  types.rs
src-tauri/src/automation/: actions.rs  condition.rs  events.rs  execution.rs  intercept.rs  live_traffic.rs  mod.rs  port_scan.rs  scheduled.rs  types.rs
src-tauri/src/browser/: crawl_helpers.rs  crawl_runner.rs  crawl_sidecar.rs  crawl_types.rs  mod.rs
src-tauri/src/collaborator/: state.rs  types.rs
src-tauri/src/commands/: ai.rs  api_collection.rs  audit.rs  browser.rs  browser_panel.rs  cert.rs  history.rs  inspector.rs  intercept.rs  intruder.rs  invoker.rs  license.rs  lsp.rs  mock_forge.rs  mod.rs  packet_capture.rs  playground.rs  proxy.rs  r2.rs  regression.rs  repeater.rs  storage.rs  terminal.rs  threats.rs  vpn.rs
src-tauri/src/data/: ca_cert.pem  ca_key.pem
src-tauri/src/db/: mod.rs  repository.rs  schema.rs
src-tauri/src/db/repository/: ai_browser.rs  api_collection.rs  chat_sessions.rs  documents.rs  mock_forge.rs  mod.rs  packet_capture.rs  proxy_logs.rs  regression.rs  types.rs
src-tauri/src/history/: mod.rs
src-tauri/src/intercept/: hooks.rs  mod.rs
src-tauri/src/lifecycle/: completion.rs  mod.rs  peer.rs  request.rs  response.rs
src-tauri/src/packet_capture/: commands.rs  mod.rs  parser.rs  types.rs
src-tauri/src/port-scanner/: banner.rs  mod.rs  state.rs
src-tauri/src/proxy/: adapter.rs  body.rs  ca.rs  cert.rs  client.rs  completion.rs  events.rs  handler.rs  handlers.rs  intercept.rs  lifecycle.rs  logger.rs  mitm.rs  mock_forge.rs  mod.rs  state.rs  tls.rs  types.rs  utils.rs  websocket.rs
src-tauri/src/proxy/https/: cert.rs  mod.rs
src-tauri/src/proxy/intercept/: hooks.rs  mod.rs
src-tauri/src/proxy/lifecycle/: body_decoder.rs  completion.rs  context.rs  mock_forge.rs  mod.rs  peer.rs  request.rs
src-tauri/src/repeater/: client.rs
src-tauri/src/scanner/: dependencies.rs  secrets.rs
src-tauri/src/sqli/: detector.rs  mod.rs  payloads.rs  types.rs
src-tauri/src/src/: cert.rs  db.rs  lib.rs  main.rs  repeater.rs
src-tauri/src/src/proxy/: handlers.rs  mitm.rs  mod.rs  utils.rs
src-tauri/src/src/repeater/: client.rs  mod.rs  types.rs
src-tauri/src/threats/: mod.rs  static_analysis.rs
src-tauri/tests/: README.md
todo/: NVD_FEATURE.md  document-analysis-mastra.patch
(+1736 files in other folders)
