[package]
name = "apprecon"
version = "0.1.0"
description = "Proxy App"
authors = ["Arham"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.32", features = ["bundled"] }


rcgen = { version = "0.14", features = ["x509-parser"] }
dirs = "5"

hudsucker = { version = "0.24", features = ["rustls-client", "rcgen-ca"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
futures-util = "0.3"
http = "1"
clap = { version = "4", features = ["derive"] }
url = "2.5.8"
flate2 = "1.0"
keyring = "3"
base64 = "0.22"
regex = "1"
sha1 = "0.10"
sha2 = "0.10"

[dev-dependencies]
proptest = "1.5"
tokio-test = "0.4"
